--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:56pm Thu 11th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:02pm Thu 11th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:55pm</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:56pm</td>
 	<td class="accounts"><span class="">ADS: $109,062.37 (+$388.67) @ 12:45pm</span><span class=" hidden">ADS: [hidden] @ 12:45pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:56pm</td>
 	<td class="accounts">JPB: $14,613.14 (-$20.25) @ 12:45pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:56pm</td>
 	<td class="accounts">CBA: $79,792.25 (-$13.88) @ 12:46pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:55pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:56pm</td>
 	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 12:46pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:55pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=676Gb RAM=26% @ 12:55pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=676Gb RAM=26% @ 12:56pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:55pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 19Gb RAM=64% @ 12:55pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 19Gb RAM=64% @ &nbsp;1:02pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
 	<td class="todo">Jun 12 (+1d) [M] ShineWing Invoice P</td>
 	</tr>
 	
