--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:54am Fri 12th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:00am Fri 12th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,55 +95,55 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:49am</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:57am</td>
 	<td class="accounts"><span class="">ADS: $109,049.04 (+$375.34) @ 12:07am</span><span class=" hidden">ADS: [hidden] @ 12:07am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:49am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:57am</td>
 	<td class="accounts">JPB: $14,986.93 (+$353.55) @ 9:44pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:49am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:57am</td>
 	<td class="accounts">CBA: $79,764.49 (-$41.64) @ 12:39am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:49am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:57am</td>
 	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 12:39am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:53am</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:58am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:53am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=667Gb RAM=42% @ 12:49am</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:58am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=667Gb RAM=42% @ 12:57am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:53am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=28% @ 12:54am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:58am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=28% @ 12:58am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:53am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:58am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:53am</td>
-	<td class="todo">Jun 12 (+1d) [M] ShineWing Invoice P</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:58am</td>
+	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] ShineWing Invoice Pa</td>
 	</tr>
 	
 	<tr>
 	<td class="projects" align="center">
 	<a href="index.html">show</a>|<a href="index-hide.html">hide</a>|<a href="index-boss.html">boss</a>
 	</td>
-	<td class="todo">Jun 12 (+1d) [M] Solvency Declaratio</td>
+	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] Solvency Declaration</td>
 	</tr>
 	
 	</table>
