--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:39am Fri 12th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:46am Fri 12th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#10060;</span> @ &nbsp;1:36am</td>
-	<td class="accounts"><span class=" hidden">ADS: $108,596.06 (-$77.64) @ 1:09am</span><span class="">ADS: [hidden] @ 1:09am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#10060;</span> @ &nbsp;1:44am</td>
+	<td class="accounts"><span class=" hidden">ADS: $108,696.25 (+$22.55) @ 1:40am</span><span class="">ADS: [hidden] @ 1:40am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:36am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:44am</td>
 	<td class="accounts">JPB: $14,986.93 (+$353.55) @ 9:44pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:36am</td>
-	<td class="accounts">CBA: $79,764.49 (-$41.64) @ 1:10am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:44am</td>
+	<td class="accounts">CBA: $79,764.49 (-$41.64) @ 1:41am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:36am</td>
-	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 1:10am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:44am</td>
+	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 1:41am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ &nbsp;1:38am</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ &nbsp;1:45am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;1:38am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=667Gb RAM=42% @ &nbsp;1:36am</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;1:45am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=667Gb RAM=42% @ &nbsp;1:44am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:38am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=28% @ &nbsp;1:38am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:45am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=28% @ &nbsp;1:46am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:38am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:45am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:38am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:45am</td>
 	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] ShineWing Invoice Pa</td>
 	</tr>
 	
