--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:02pm Fri 12th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:09pm Fri 12th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:59pm</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:04pm</td>
 	<td class="accounts"><span class=" hidden">ADS: $108,455.96 (-$71.10) @ 12:00pm</span><span class="">ADS: [hidden] @ 12:00pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:59pm</td>
-	<td class="accounts">JPB: $14,945.23 (-$41.70) @ 12:46pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:04pm</td>
+	<td class="accounts">JPB: $14,939.83 (-$47.10) @ 1:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:59pm</td>
-	<td class="accounts">CBA: $79,725.63 (-$38.86) @ 12:33pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:04pm</td>
+	<td class="accounts">CBA: $79,729.79 (-$34.70) @ 1:04pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:59pm</td>
-	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 12:32pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:04pm</td>
+	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 1:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:08pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=659Gb RAM=27% @ 12:59pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:08pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=659Gb RAM=27% @ &nbsp;1:04pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#10060;</span> @ &nbsp;1:01pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 19Gb RAM=40% @ &nbsp;1:02pm</td>
+	<td class="projects">UR3 <span class="emoji">&#10060;</span> @ &nbsp;1:08pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 19Gb RAM=40% @ &nbsp;1:08pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:08pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:01pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:08pm</td>
 	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] ShineWing Invoice Pa</td>
 	</tr>
 	
