--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 4:20pm Fri 12th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 4:25pm Fri 12th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -101,7 +101,7 @@
 	
 	<tr>
 	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;4:18pm</td>
-	<td class="accounts">JPB: $14,987.39 (+$0.45) @ 4:01pm</td>
+	<td class="accounts">JPB: $14,979.89 (-$7.05) @ 4:24pm</td>
 	</tr>
 	
 	<tr>
@@ -115,27 +115,27 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;4:20pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;4:24pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;4:20pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;4:24pm</td>
 	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=653Gb RAM=42% @ &nbsp;4:18pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;4:20pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=40% @ &nbsp;4:20pm</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;4:24pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=40% @ &nbsp;4:24pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:20pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:24pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;4:20pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;4:24pm</td>
 	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] ShineWing Invoice Pa</td>
 	</tr>
 	
