--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 4:36pm Fri 12th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 4:43pm Fri 12th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:32pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $108,616.12 (+$89.06) @ 4:08pm</span><span class="">ADS: [hidden] @ 4:08pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:37pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $108,390.63 (-$136.43) @ 4:39pm</span><span class="">ADS: [hidden] @ 4:39pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;4:32pm</td>
-	<td class="accounts">JPB: $14,979.89 (-$7.05) @ 4:24pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;4:37pm</td>
+	<td class="accounts">JPB: $14,967.89 (-$19.05) @ 4:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;4:32pm</td>
-	<td class="accounts">CBA: $79,736.73 (-$27.76) @ 4:10pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;4:37pm</td>
+	<td class="accounts">CBA: $79,736.73 (-$27.76) @ 4:41pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:32pm</td>
-	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 4:09pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:37pm</td>
+	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 4:40pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;4:34pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;4:41pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;4:34pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=651Gb RAM=57% @ &nbsp;4:32pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;4:41pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=651Gb RAM=53% @ &nbsp;4:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;4:34pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=40% @ &nbsp;4:35pm</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;4:41pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=40% @ &nbsp;4:41pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:34pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;4:41pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;4:34pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;4:41pm</td>
 	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] ShineWing Invoice Pa</td>
 	</tr>
 	
