--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 5:56pm Fri 12th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 6:01pm Fri 12th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -101,7 +101,7 @@
 	
 	<tr>
 	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;5:56pm</td>
-	<td class="accounts">JPB: $15,031.18 (+$44.25) @ 5:36pm</td>
+	<td class="accounts">JPB: $15,070.18 (+$83.25) @ 5:55pm</td>
 	</tr>
 	
 	<tr>
@@ -115,35 +115,35 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;5:54pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;6:01pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;5:54pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;6:01pm</td>
 	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=651Gb RAM=54% @ &nbsp;5:56pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;5:54pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=40% @ &nbsp;5:55pm</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;6:01pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=40% @ &nbsp;6:01pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;5:54pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;6:01pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;5:54pm</td>
-	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] ShineWing Invoice Pa</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;6:01pm</td>
+	<td class="todo">Jun 16 (+4d) [M] City West Water - B</td>
 	</tr>
 	
 	<tr>
 	<td class="projects" align="center">
 	<a href="index.html">show</a>|<a href="index-hide.html">hide</a>|<a href="index-boss.html">boss</a>
 	</td>
-	<td class="todo"><span class="emoji">&#9940;</span>Jun 12 (0d) [M] Solvency Declaration</td>
+	<td class="todo">Jul 1 (+19d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
 	</table>
