--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ &nbsp;</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:22am Sat 13th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,55 +95,55 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts"><span class="">&nbsp;</span><span class=" hidden">&nbsp;</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 11:11am</td>
+	<td class="accounts"><span class="">ADS: $108,972.47 (+$527.27) @ 11:18am</span><span class=" hidden">ADS: [hidden] @ 11:18am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">OD1 <span class="emoji">&#10060;</span> @ 11:11am</td>
+	<td class="accounts">JPB: $15,003.73 (+$2.10) @ 11:15am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">OT1 <span class="emoji">&#10060;</span> @ 11:11am</td>
+	<td class="accounts">CBA: $79,736.73 ($0.00) @ 11:20am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 11:11am</td>
+	<td class="accounts">ANZ: $6,890.17 ($0.00) @ 11:20am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 11:21am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="computers">&nbsp;</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 11:21am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=643Gb RAM=15% @ 11:11am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="computers">&nbsp;</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:21am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=61% @ 11:21am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:21am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="todo">&nbsp;</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 11:21am</td>
+	<td class="todo">Jun 16 (+3d) [M] City West Water - B</td>
 	</tr>
 	
 	<tr>
 	<td class="projects" align="center">
 	<a href="index.html">show</a>|<a href="index-hide.html">hide</a>|<a href="index-boss.html">boss</a>
 	</td>
-	<td class="todo">&nbsp;</td>
+	<td class="todo">Jul 1 (+18d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
 	</table>
