--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:12pm Sat 13th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:18pm Sat 13th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:07pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $108,855.42 (+$410.22) @ 11:47am</span><span class="">ADS: [hidden] @ 11:47am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:17pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $108,855.42 (+$410.22) @ 12:16pm</span><span class="">ADS: [hidden] @ 12:16pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:07pm</td>
-	<td class="accounts">JPB: $14,994.43 (-$7.20) @ 11:51am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:17pm</td>
+	<td class="accounts">JPB: $14,959.93 (-$41.70) @ 12:15pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:07pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:17pm</td>
 	<td class="accounts">CBA: $79,736.73 ($0.00) @ 11:50am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:07pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:17pm</td>
 	<td class="accounts">ANZ: $6,890.17 ($0.00) @ 11:51am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:11pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:16pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:11pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=652Gb RAM=49% @ 12:07pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:16pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=652Gb RAM=48% @ 12:17pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:11pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=35% @ 12:12pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:16pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 18Gb RAM=31% @ 12:17pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:11pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:16pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:11pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:16pm</td>
 	<td class="todo">Jun 16 (+3d) [M] City West Water - B</td>
 	</tr>
 	
