--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:54pm Sat 13th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:02am Sun 14th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 11:47pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $111,477.13 (+$3,031.93) @ 11:28pm</span><span class="">ADS: [hidden] @ 11:28pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 11:56pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $111,042.59 (+$2,597.39) @ 11:58pm</span><span class="">ADS: [hidden] @ 11:58pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 11:47pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 11:56pm</td>
 	<td class="accounts">JPB: $14,775.28 (-$226.35) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 11:47pm</td>
-	<td class="accounts">CBA: $79,736.73 ($0.00) @ 11:29pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 11:56pm</td>
+	<td class="accounts">CBA: $79,736.73 ($0.00) @ 11:59pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 11:47pm</td>
-	<td class="accounts">ANZ: $6,890.17 ($0.00) @ 11:30pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 11:56pm</td>
+	<td class="accounts">ANZ: $6,890.17 ($0.00) @ 12:01am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 11:53pm</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:01am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 11:53pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=642Gb RAM=36% @ 11:47pm</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:01am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=642Gb RAM=37% @ 11:56pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:53pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 14Gb RAM=45% @ 11:53pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:01am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 14Gb RAM=45% @ 12:01am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:53pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:01am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 11:53pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:01am</td>
 	<td class="todo">Jun 16 (+3d) [M] City West Water - B</td>
 	</tr>
 	
