--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:59pm Sun 14th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:05pm Sun 14th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:58pm</td>
-	<td class="accounts"><span class="">ADS: $111,337.05 (+$69.54) @ 12:32pm</span><span class=" hidden">ADS: [hidden] @ 12:32pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:03pm</td>
+	<td class="accounts"><span class="">ADS: $111,560.37 (+$292.86) @ 1:01pm</span><span class=" hidden">ADS: [hidden] @ 1:01pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:58pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
 	<td class="accounts">JPB: $14,674.78 (-$100.50) @ 12:53pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:58pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
 	<td class="accounts">CBA: $79,736.73 ($0.00) @ 12:39pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:58pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:03pm</td>
 	<td class="accounts">ANZ: $6,890.17 ($0.00) @ 12:41pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:58pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:05pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:58pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=635Gb RAM=46% @ 12:58pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:05pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=635Gb RAM=46% @ &nbsp;1:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:58pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 17Gb RAM=26% @ 12:59pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:05pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 17Gb RAM=26% @ &nbsp;1:05pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:58pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:05pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:58pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:05pm</td>
 	<td class="todo">Jun 16 (+2d) [M] City West Water - B</td>
 	</tr>
 	
